--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,10 @@
         <mysql-connector.version>5.1.18</mysql-connector.version>
         <hibernate.version>3.6.8.Final</hibernate.version>
         <javassist.version>3.12.1.GA</javassist.version>
+        <guava.version>r09</guava.version>
+        
+        <tiles.version>2.2.2</tiles.version>
+        <jstl.version>1.2</jstl.version>
 
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -150,13 +154,32 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>r09</version>
+            <version>${guava.version}</version>
         </dependency>
         
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <version>${jstl.version}</version>
+        </dependency>
+        
+        <!-- Tiles -->
+<!--        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-extras</artifactId>
+            <version>2.2.2</version>
+        </dependency>-->
+        
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-servlet</artifactId>
+            <version>${tiles.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-jsp</artifactId>
+            <version>${tiles.version}</version>
         </dependency>
 
   </dependencies>
