--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,28 +3,34 @@
     
     <display-name>SpringInActionWebbb</display-name>
     
-    <!-- Domyślnie wczytywany jest context: nazwa_serwletu-servlet.xml -->
-<!--    <servlet>
-        <servlet-name>dispatcher</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
-    </servlet>    
-    <servlet-mapping>
-        <servlet-name>dispatcher</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>-->
     
+    
+    <!-- Domyślnie wczytywany jest context: nazwa_serwletu-servlet.xml -->
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>2</load-on-startup>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
     
+    <!-- wczytywanie dodatkowych plików xml z definicjami beanów do głównego contextu -->
+    <listener>
+        <listener-class>
+            org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+    </listener>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            /WEB-INF/dao-context.xml
+            <!-- classpath:service-context-->
+        </param-value>
+    </context-param>
     
+    <!-- lista plików które są wczytywane jako domyślne dla strony startowej -->
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
