--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
   <dependencies>
       
     <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>1.4</version>
+    </dependency>
+            
+      
+    <dependency>
         <groupId>javax</groupId>
         <artifactId>javaee-web-api</artifactId>
         <version>${javax.version}</version>
